	  license('perl') (ADAMK)
	- Implemented the bugtracker_from command (ADAMK)
	- Added bugtracker_from to the all_from command
	  (Although we don't warn if not provided) (ADAMK)
	- Shifting minimum perl version for Module::Install to 5.005
	  (Anything older should use ExtUtils::MakeMaker) (ADAMK)
	- perl_version errors if it gets a value less that 5.005 (ADAMK)

0.75 Mon  2 Jun 2008 - Adam Kennedy
	- Documenting the smaller post Module::Build core package
	  Module::Install::With and removed experimental warning (ADAMK)
	- Disabled the broken install_share error check (CLACO)
	- Disabled "pointless version 0" warning, as it encourages less
	  metadata (ADAMK)
	- Adding an experimental undocumented implementation of a
	  "resources" and "repository" command (ADAMK)
	- Don't dump "tests" and "installdirs" to META.yml (ADAMK)

0.74 Mon 26 May 2008 - Adam Kennedy
	- Fix incorrect comparison of module and distribution names (RJBS)
	- Allow "require" instead of "use" when finding required perl version (RJBS)
	- Remove the -f Build.PL check, as it was breaking for people trying to
	  convert from M:B to M:I or vice versa (MSTROUT)

0.73 Wed 14 May 2008 - Adam Kennedy
	- Aggressively increase dependencies for authors to make sure
	  all the latest release-time tricks will work properly. (ADAMK)
	- When generating META.yml where there is an overall Perl version
	  dependency, add a test for unversioned core dependencies that
	  MUST already be satified by the Perl dependency. (ADAMK)
	- Merged Module::Install MANIFEST.SKIP into the repository
	  default MANIFEST.SKIP file, and deleted the M:I one (ADAMK)

0.72 Tue 15 Apr 2008 - Adam Kennedy
	- exit(0) on requires_external_bin to make it a real NA (ADAMK)
	- Change docs to recommend the use of test_requires instead
	  of build_requires. They do the same thing now, but this may
	  change in the future and in that case better people use
	  test_requires now as it is a more accurate description of