@@ -1,0 +1,1 @@
+This is a file used to test the install_share functionality.
